--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
@@ -107,7 +107,7 @@
     to commit without updating. However, in general team members should make an 
     effort to follow a flow similar to the above in order to ensure that the branch 
     integrity is not accidentally compromised.&nbsp;
-  <p CLASS="Para">You can find more information on CVS at <a href="http://www.cvshome.org" class="URL">http://www.cvshome.org.</a>
+  <p CLASS="Para">You can find more information on CVS at <a href="http://www.cvshome.org" class="URL" target="_blank">http://www.cvshome.org.</a>
 </div>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
