--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -20,7 +20,7 @@
   by CVS.</P>
 <DIV CLASS="Topic">
 <P CLASS="Para">
-You can find more information on CVS at <A HREF="http://www.cvshome.org" CLASS="URL">http://www.cvshome.org.</A></P>
+You can find more information on CVS at <A HREF="http://www.cvshome.org" CLASS="URL" target="_blank">http://www.cvshome.org.</A></P>
 </DIV>
 
 
