--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
@@ -12,7 +12,7 @@
 <P CLASS="Para">
 A repository is a persistent store that coordinates multi-user access to the
 resources being developed by a team. The workbench comes with CVS support
-built-in. The CVS server is available at <a href="http://www.cvshome.org">http://www.cvshome.org</a>.&nbsp;</P>
+built-in. The CVS server is available at <a href="http://www.cvshome.org" target="_blank">http://www.cvshome.org</a>.&nbsp;</P>
 <P CLASS="Para">
 Please refer to this site for information on how to install and configure your
 CVS repository including user access and passwords.</P>
