--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -55,7 +55,7 @@ will be ignored.
 
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="http://www.cvshome.org/docs/manual/cvs_18.html#SEC175">www.cvshome.org: Ignoring files via cvsignore</a>
+<a href="http://www.cvshome.org/docs/manual/cvs_18.html#SEC175" target="_blank">www.cvshome.org: Ignoring files via cvsignore</a>
 </p>
 
 <p>&nbsp;<br>
