--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -105,8 +105,8 @@ with the other two choices.</P>
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC85">www.cvshome.org: Bringing a file up to date</a><br>
-<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC86">www.cvshome.org: Conflicts example</a>
+<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC85" target="_blank">www.cvshome.org: Bringing a file up to date</a><br>
+<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC86" target="_blank">www.cvshome.org: Conflicts example</a>
 </p>
 
 </BODY>
