--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
@@ -19,7 +19,7 @@ access):</p>
     published. In the Feature Updates view, use the view's context menu <b>New</b>
     &gt; <b>Site Bookmark</b>.</li>
   <li>In the New Site Bookmark dialog that opens, give the site a name such as
-    &quot;CompanyA&quot; and enter the URL such as &quot;<a href="http://com.example.companyA/eclipseupdates">http://com.example.companyA/eclipseupdates</a>&quot;.</li>
+    &quot;CompanyA&quot; and enter the URL such as &quot;http://com.example.companyA/eclipseupdates&quot;.</li>
   <li>Expand the newly created item in Feature Updates view to show the
     categories of feature versions available at that update site. This will
     contact the web site to discover what features are available.</li>
