--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
@@ -16,7 +16,7 @@ It is possible to add new Ant tasks and types through the Ant preferences page.
 These tasks and types will be available for scripts running in the workbench 
 without having to use taskdef or typedef in the script declaration (for more on 
 taskdef or typedef see the Ant documentation in
-<a href="http://jakarta.apache.org/ant">http://jakarta.apache.org/ant</a> ). The 
+<a href="http://jakarta.apache.org/ant" target="_blank">http://jakarta.apache.org/ant</a> ). The 
 following steps illustrate how to add a new task.</P>
 
 <ol>
