--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -40,7 +40,7 @@ steps illustrate how to install a binary distribution of Ant  as an external too
 it can be easily ported to other Operating Systems:</p>
 <ul>
   <li><p CLASS="Para">Download and install the binary version of Ant from
-  <a href="http://jakarta.apache.org/ant">http://jakarta.apache.org/ant</a> .</p>
+  <a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> .</p>
   </li>
   <li><p CLASS="Para">Go to the menu <b>Run &gt; External Tools &gt; Configure</b>.</p>
   </li>
