--- a/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
@@ -20,8 +20,23 @@ by a thin vertical line.
     if it does not have thick vertical bars next to the thin vertical toolbar
     dividers.</p>
     <p CLASS="Para">
-    <img align="texttop" border="0" src="../images/Image????.jpg" alt="Locked toolbar">
-    <img align="texttop" border="0" src="../images/Image????.jpg" alt="Unlocked toolbar">    
+    <img align="texttop" border="0" src="../images/Image90_locked_toolbar.jpg" alt="Locked toolbar" >
+    &nbsp;    
+    </P>
+    <p CLASS="Para">
+    Locked toolbar    
+    </P>
+    <p CLASS="Para">
+    &nbsp;    
+    </P>
+    <p CLASS="Para">
+    <img align="texttop" border="0" src="../images/Image90_unlocked_toolbar.jpg" alt="Unlocked toolbar">    
+    </P>
+    <p CLASS="Para">
+    Unlocked toolbar    
+    </P>
+    <p CLASS="Para">
+    &nbsp;    
     </P>
     <p CLASS="Para">
     If the toolbar is locked, unlock the toolbar by selecting the <b>Window->Lock the Toolbars</b> menu item.
@@ -50,12 +65,11 @@ by a thin vertical line.
     selecting the <b>Window->Lock the Toolbars</b> menu item.
     </li>
 </ol>
-<p CLASS="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<p CLASS="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" >
 <a href="../concepts/concepts-18.htm"><br>Toolbars</a>
 
 <P CLASS="Para" Label=Type>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a></p>
-</P>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a></p>
 
 
 </BODY>
