--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
@@ -10,15 +10,17 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Extracting a local variable</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<P>To extract a local variable from an expression:</P>
+<ul>
+  <li> In a Java editor, select the expression that you want to extract to a local 
+    variable </li>
+  <li>Do one of the following: </li>
+  <ul>
+    <li>From the editor's pop-up menu, select Refactor &gt; Extract Local Variable 
+      or </li>
+    <li>From the menu bar, select Refactor &gt; Extract Local Variable</li>
+  </ul>
+</ul>
+<img src = ../ngibmcpy.gif>
 </BODY>
 </HTML>
