--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -9,13 +9,25 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Parameters page</h1>
+<h1 CLASS="Head"> Parameters page</h1>
+<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-160a.gif" width="463" height="307" alt="Parameters Page for the Extracting a local variable Refactoring Command"></h1>
 
-<div CLASS="FigureTitle">Parameters Page for the Extracting a local variable
-Refactoring Command</div>
+<div CLASS="FigureTitle"> 
+  <p>Parameters Page for the Extracting a local variable Refactoring Command</p>
+  <p>&nbsp;</p>
 </div>
-
+<ul>
+  <li> 
+    <div CLASS="FigureTitle">In the Variable name field, enter a name for the 
+      extracted variable</div>
+  </li>
+  <li>Optionally, unselect the <b>Replace all occurences of the selected expression 
+    with references to the local variable</b> checkbox if you want to replace 
+    only the expression you selected when invoking the refactoring.</li>
+  <li>Optionally, select <b>Define the local variable as 'final'</b></li>
+  <li>Press <b>Next</b> to see the preview of the changes or <b>Finish</b> to 
+    perform the refactoring wthout preview</li>
+</ul>
 <div CLASS="XRefList">
 <div CLASS="Para">Related Topics:</div>
 
