--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
@@ -8,17 +8,21 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Inlining a local variable</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<H1 CLASS="Head"> Inlining a local variable</H1>
+<P>To inlne a local variable:</P>
+<ul>
+  <li>&nbsp;In a Java editor, select the variable that you want to inline (you 
+    can select a reference to the variable)</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>From the menu bar, select <b>Refactor &gt; Inline Local Variable</b> 
+        or</li>
+      <li>From the editor's pop-up menu, select <b>Refactor &gt; Inline Local 
+        Variable</b><br>
+      </li>
+    </ul>
+  </li>
+</ul>
+   <img src = ../ngibmcpy.gif> 
 </BODY>
 </HTML>
