--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-162.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-162.htm
@@ -10,15 +10,29 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Self encapsulating a field</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<P>&nbsp;</P>
+<P>To self-encapsulate a field:</P>
+<ul>
+  <li>Select the field in one of the Java views (e.g. Outline, Package Explorer 
+    or Members view)</li>
+  <li>Do one of the following 
+    <ul>
+      <li>From the menu bar, select <b>Refactor &gt; Self Encapsulate</b> or</li>
+      <li>From the field's pop-up menu, select <b>Refactor &gt; Self Encapsulate</b><br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<p>You can also invoke this refactoring from the Java editor:</p>
+<ul>
+  <li>In the Java editor, select the field (or a reference to it)</li>
+  <li>Do one of the following 
+    <ul>
+      <li>From the menu bar, select <b>Refactor &gt; Self Encapsulate</b> or</li>
+      <li>From the editor's pop-up menu, select <b>Refactor &gt; Self Encapsulate</b></li>
+    </ul>
+  </li>
+</ul>
+<p><img src = ../ngibmcpy.gif > </p>
 </BODY>
 </HTML>
