--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
@@ -2,23 +2,25 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Pulling members up to superclass</title>
-
 </HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Pulling members up to superclass</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<BODY BGCOLOR="#FFFFFF">
+<H1 CLASS="Head"> Pulling members up to superclass</H1>
+<P>To pull up class members (fields and methods) to the class' superclass:</P>
+<ul>
+  <li>In a Java view (e.g. Outline, Package Explorer, Members), select the members 
+    that you want to pull up.</li>
+  <li>Do on of the following:
+    <ul>
+      <li>From the menu bar, select Refactor &gt; Pull Up or</li>
+      <li>From the pop-up menu, select Refactor &gt; Pull Up<br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<p><b>Note:</b> the selected members must all have the same declaring type for 
+  this refactoring to be enabled.</p>
+<p><img src = ../ngibmcpy.gif> </p>
 </BODY>
 </HTML>
