--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-167.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-167.htm
@@ -8,17 +8,18 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Moving static members between types</H1>
+<H1 CLASS="Head"> Moving static members between types</H1>
 <P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+  To move static members (fields and methods) between types:</P>
+<ul>
+  <li>In a Java view, select the static members that you want to move</li>
+  <li>Do one of the following:
+    <ul>
+      <li>From the menu bar, select <b>Refactor &gt; Move</b> or</li>
+      <li>From the pop-up menu select, <b>Refactor &gt; Move</b></li>
+    </ul>
+  </li>
+</ul>
+<img src = ../ngibmcpy.gif>
 </BODY>
 </HTML>
