--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
@@ -9,13 +9,20 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Parameters page</h1>
+<h1 CLASS="Head"> Parameters page</h1>
+<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-168a.gif" width="520" height="231" alt="Parameters Page for the Moving static members between types Refactoring Command"></h1>
 
-<div CLASS="FigureTitle">Parameters Page for the Moving static members between types
-Refactoring Command</div>
+<div CLASS="FigureTitle"> 
+  <p>Parameters Page for the Moving static members between types Refactoring Command</p>
 </div>
-
+<ul>
+  <li> 
+    <div CLASS="FigureTitle"> Use the text field to enter the destination type 
+      name or press the <b>Browse</b> button to see a list of types.</div>
+  </li>
+  <li>Press <b>Next</b> to see a preview or press <b>Finish</b> to perform the 
+    refactoring without preview.</li>
+</ul>
 <div CLASS="XRefList">
 <div CLASS="Para">Related Topics:</div>
 
