--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
@@ -8,17 +8,25 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Reordering method parameters</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<H1 CLASS="Head"> Reordering method parameters</H1>
+<P>You can reorder method parameters.</P>
+<ul>
+  <li>Select the method in a Java view (e.g. Outline, Package Explorer, Members).</li>
+  <li>Do one of the following to open the Modify Paramaters refactoring wizard: 
+    <ul>
+      <li>From the menu bar, select Refactor &gt; Modify Paramaters or</li>
+      <li>From the method's pop-up menu, select Refactor &gt; Modify Paramaters</li>
+    </ul>
+  </li>
+</ul>
+<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159> 
+</p>
+<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="tasks-96.htm">Renaming a method</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../reference/ref-116.htm">Refactoring actions</a>
+<p>
+<img src = ../ngibmcpy.gif> 
 </BODY>
 </HTML>
