--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -9,12 +9,12 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Parameters page</h1>
+<h1 CLASS="Head"> Parameters page</h1>
+<h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-163a.gif" width="433" height="326" alt="Parameters Page for the Self Encapsulate Field Refactoring Command"></h1>
 
-<div CLASS="FigureTitle">Parameters Page for the Self encapsulating field
-Refactoring Command</div>
-</div>
+<div CLASS="FigureTitle">Parameters Page for the Self Encapsulate Field Refactoring 
+  Command</div>
+
 
 <div CLASS="XRefList">
 <div CLASS="Para">Related Topics:</div>
