--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
@@ -10,15 +10,37 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Replacing a local variable with a query</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
+<P>&nbsp;To replace a local variable with a query:</P>
+<ul>
+  <li>In the Java editor, select the expression with which the local variable 
+    is initiated</li>
+  <li>Invoke the Extract Method refactoring by either: 
+    <ul>
+      <li>Selecting <b>Refactor &gt; Extract Method</b> from the editor's pop-up 
+        menu or</li>
+      <li>Selecting <b>Refactor &gt; Extract Method</b> from the menu bar </li>
+    </ul>
+  </li>
+  <li>Perform the Extract Method refactoring</li>
+  <li>Select the local variable (or a reference to it)</li>
+  <li>Invoke the Inline Local Variable by either: 
+    <ul>
+      <li>Selecting <b>Refactor &gt; Inline Local Variable</b> from the editor's 
+        pop-up menu or</li>
+      <li>Selecting <b>Refactor &gt; Inline Local Variable</b> from the menu bar</li>
+    </ul>
+  </li>
+  <li>Perform the Inline Local Variable refactoring<br>
+  </li>
+</ul>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159> 
+<p><a href="tasks-87.htm">Extracting a method</a> 
+<p><a href="tasks-161.htm">Inlining a local variable</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159> 
+<p><a href="../reference/ref-116.htm">Refactoring actions</a> 
+<p><br>
+  &nbsp; <img src = ../ngibmcpy.gif> 
 </BODY>
 </HTML>
