Updated doc for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -20,6 +20,20 @@ From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>.</li>
 <p CLASS="Head">
 Expand the <b>Debug </b>category and select <b>Console</b>. The Console 
 Preferences page opens.</li>
+ <li>
+<P CLASS="Para">
+Selecting the <b> <SPAN CLASS="Label">
+Show when program writes to standard out</SPAN></b>
+ option causes the Console view in the current perspective to become visible each time new output is written to the console from the program's standard output stream.
+If there is no Console view in the current perspective, one will be created.</P>
+</li>
+ <li>
+<P CLASS="Para">
+Selecting the <b> <SPAN CLASS="Label">
+Show when program writes to standard err</SPAN></b>
+ option causes the Console view in the current perspective to become visible each time new output is written to the console from the program's standard error stream.
+If there is no Console view in the current perspective, one will be created.</P>
+</li>
 <li>
 <p CLASS="Head">
 Click any of the color buttons to change the color for the corresponding text. 
