--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -16,30 +16,25 @@ Changing debugger launch options</H1>
 Select <b>Workbench</b> &gt; <b>Preferences</b> &gt; <b>Debug</b>.</li>
 <li>
 <P CLASS="Para">
-Selecting the <b> <SPAN CLASS="Label">
-Show Debug Perspective when a program is launched in debug mode</SPAN></b>
- option causes an existing Debug perspective to become active automatically each time a program is launched in debug mode. The resulting launch is selected in the Debug view.
+Setting the <b> <SPAN CLASS="Label">
+Default perspective for Debug</SPAN></b>
+ option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in debug mode. This default can be overriden in a launch configuration 
+ by setting the <b><SPAN CLASS="Label">Perspective to switch to or open when launched in: &gt; Debug mode</SPAN></b> option found on the <b>Common</b> tab in the launch configuration dialog.
 <br>
 <br>
-If no Debug perspective is open at the time, a Debug perspective is created. If a Debug perspective is created, it will adhere to the workbench preference for new perspectives (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Workbench</b>) and will either open in the same window, open in a new window, or replace the current perspective.</P>
+If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new perspectives (<b>Window</b> &gt; 
+<b>Preferences</b> &gt; <b>Workbench</b> &gt; <b>Perspectives</b>) and will either open in the same window or in a new window.</P>
 </li>
 <li>
 <P CLASS="Para">
-Selecting the <b> <SPAN CLASS="Label">
-Show Debug Perspective when a program is launched in run mode</SPAN></b>
- option causes an existing debug perspective to become active automatically each time a program is launched in debug mode. The resulting launch is selected in the Processes view.
+Setting the <b> <SPAN CLASS="Label">
+Default perspective for Run</SPAN></b>
+ option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in run mode. This default can be overriden in a launch configuration 
+ by setting the <b><SPAN CLASS="Label">Perspective to switch to or open when launched in: &gt; Run mode</SPAN></b> option found on the <b>Common</b> tab in the launch configuration dialog.
 <br>
 <br>
-If no Debug perspective is open at the time, a Debug perspective is created. If a Debug perspective is created, it will adhere to the workbench preference for new perspectives (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Workbench</b>) and will either open in the same window, open in a new window, or replace the current perspective.</P>
-</li>
-<li>
-<P CLASS="Para">
-Selecting the <b> <SPAN CLASS="Label">
-Show Console View when there is program output</SPAN></b>
- option causes the Console view in the current perspective to become visible each time new output is written to the console.
-If there is no Console view in the current perspective, one will be created.</P>
+If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new perspectives (<b>Window</b> &gt; 
+<b>Preferences</b> &gt; <b>Workbench</b> &gt; <b>Perspectives</b>) and will either open in the same window or in a new window.</P>
 </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
