Fixed html errors

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -41,7 +41,7 @@ same manner as the menu associated with the workbench window.</P>
 The view pull-down menu typically contains operations that apply to the entire
 contents of the view, but not to a specific item shown in the view. Operations
 for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
-<P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image7_view_pulldown.jpg" alt="Navigator view menu, arrow pulldown"" ></P>
+<P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image7_view_pulldown.jpg" alt="Navigator view menu, arrow pulldown" ></P>
 <P CLASS="Para">&nbsp;</P>
 <P CLASS="Para">
  In the event
