--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -45,7 +45,7 @@ From the menubar, select File &gt; Export.</P>
 <P CLASS="Para">
 In the export wizard, select File System, then click Next.</P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image42_export.jpg" alt="Export Wizard" width="469" height="558"></P>
+<img align="texttop" border="0" src="../images/Image42_export.jpg" alt="Export Wizard" ></P>
 </TD>
 </TR>
 <TR>
@@ -64,8 +64,7 @@ resources you want to export.</p>
 JanesINIFile.ini we could have simply selected it in the Navigator and chosen
 File &gt; Export. The export wizard would have automatically ensured it was the
 only file checked for export.</p>
-<p class="Para"><img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt=Export Wizard" width="559" height="578">
-</p>
+<p class="Para"><img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt="Export Wizard" ></p>
 </TD>
 </TR>
 <TR>
@@ -116,11 +115,11 @@ Click Finish when you are done.</P>
 </TBODY>
 </TABLE>
 <P>&nbsp;<P><a href="qs-31a.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
 Importing files</a><P><a href="qs-24b.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Drag and drop or copy and paste</a><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
 
 </P>
 
