--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -61,7 +61,7 @@ containing the file JanesINIFile.ini that we recently exported.&nbsp;</P>
 <P CLASS="Para">Recent directories that you have imported from are shown on the <i>Directory</i>
 field's combo box.</P>
 <blockquote>
-  <P CLASS="Para">&nbsp;<img align="texttop" border="0" src="../images/Image41_import_combo.jpg" alt=Import Wizard" width="525" height="44"></P>
+  <P CLASS="Para">&nbsp;<img align="texttop" border="0" src="../images/Image41_import_combo.jpg" alt="Import Wizard" width="525" height="44"></P>
 </blockquote>
 </TD>
 </TR>
