--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -14,7 +14,7 @@
 <h1>Online help system</h1>
 
 <p>The online help system provides access to the documentation, and lets you 
-browse, search, and print it. The documentation is organized into of sets of 
+browse, search, and print it. The documentation is organized into sets of 
 information that are listed on the Bookshelf, the first view the help system 
 opens to. These,
 along with a full-text search engine and context-sensitive interface help, are
