--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -38,8 +38,8 @@ major sets of documentation available. </p>
 </ol>
 
 <p>As an alternative to browsing the information this way,  use the
-search engine. Type a query into the field at the upper right-hand corner of the 
-browser.</p>
+search engine. Type a query into the <b>Search</b> field at the top of the 
+browser and click <b>Go</b>.</p>
 
 <p>To see context-sensitive help from the workbench
 put focus on a
