--- a/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
@@ -18,10 +18,10 @@ or complex queries on the documentation to help you find the information you
 are looking for.</p>
 <p>To search the online help:</p>
 <ol>
-  <li>In the Search field in the upper right-hand corner of the Help browser, 
+  <li>In the <b>Search</b> field at the top of the Help browser, 
   type the term or terms for which you want to search.
   </li>
-  <li>Click <b>Search</b> or press Enter. The result set will be shown in the 
+  <li>Click <b>Go</b> or press Enter. The result set will be shown in the 
   Search Results view of the Help browser.</li>
   <li>To view the content of a topic in the result set, select it. Hits within 
   the selected topic are highlighted.</li>
