--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -12,16 +12,16 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=423 width=428>
-<div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
+<div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=418 width=347> 
+  <div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
 Refactoring Command</div>
 </div>
 
 <ul>
 <li CLASS="Para">
-Click in the&nbsp;<span CLASS="Label"><b>Name</span></b> column on the
+Click in the&nbsp;<span CLASS="Label"><b>Name</b></span> column on the
 row containing the parameter you want to change or select the row and press
-the&nbsp;<span CLASS="Label"><b>Edit</span></b> and type a new name for
+the&nbsp;<span CLASS="Label"><b>Edit</b></span> and type a new name for
 the parameter.</li>
 </ul>
 
