--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -9,7 +9,8 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">Viewing the type hierarchy</h1>
+<h1 CLASS="Head">
+Viewing the Type Hierarchy</h1>
 
 <div CLASS="Para">In this section, you will learn about using the Hierarchy
 view.</div>
@@ -55,7 +56,7 @@ the base classes and subclasses.
 <br>The small arrow on the left side of the type icon of TestCase indicates
 that the hierarchy was opened on this type.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-29.gif" NOSAVE height=382 width=229></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-29.gif" NOSAVE height=156 width=229></div>
 </td>
 </tr>
 
@@ -86,7 +87,7 @@ implements the Test interface.</div>
 <div CLASS="Para">Click the&nbsp;<span CLASS="Label">Show the Subtype Hierarchy</span>
 button in the view toolbar.</div>
 
-<div CLASS="Snapshot"><img SRC="../images/qs-31.gif" NOSAVE height=176 width=240></div>
+<div CLASS="Snapshot"><img SRC="../images/qs-31.gif" NOSAVE height=120 width=240></div>
 </td>
 </tr>
 
@@ -145,7 +146,7 @@ from its context menu.</div>
 <div CLASS="Para">A hierarchy is opened containing all classes of the package.
 For completion of the tree, the hierarchy also shows some classes from
 other packages. These types are shown by a type image with a white fill.&nbsp;
-<br><img SRC="../images/qs-33a.gif" NOSAVE height=506 width=263></div>
+<br><img SRC="../images/qs-33a.gif" NOSAVE height=226 width=263></div>
 </td>
 </tr>
 
