--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -10,7 +10,7 @@
 <body bgcolor="#FFFFFF">
 
 <h1 CLASS="Head">
-Creating a Java class</h1>
+Creating a Java Class</h1>
 
 <div CLASS="Para">In this section, you will create a new Java class and
 add methods using the code generation actions.</div>
@@ -149,7 +149,7 @@ Java > Templates and edit the templates 'filecomment' and 'typecomment'.</td>
 
 <td>In the Outline view select the new class&nbsp;<span CLASS="Filename">MyTestCase</span>.
 Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</span>.
-<br><img SRC="../images/qs-43a.gif" NOSAVE height=451 width=276></td>
+<br><img SRC="../images/qs-43a.gif" NOSAVE height=247 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -187,7 +187,7 @@ field container' to add the new field.
 <td>In the Outline view, select the class&nbsp;<span CLASS="Filename">MyTestCase</span>.
 Open the context menu and select&nbsp;<span CLASS="Label">Generate Getter
 and Setter...</span>.
-<br><img SRC="../images/qs-43e.gif" NOSAVE height=507 width=321></td>
+<br><img SRC="../images/qs-43e.gif" NOSAVE height=275 width=321></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -196,7 +196,7 @@ and Setter...</span>.
 <td>The Generate Getter and Setter dialog suggests creating the methods
 getContainer and setContainer. Select both and click&nbsp;<span CLASS="Label">OK</span>.
 A Getter and Setter for the field container are added.
-<br><img SRC="../images/qs-43f.gif" NOSAVE height=405 width=276></td>
+<br><img SRC="../images/qs-43f.gif" NOSAVE height=248 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
