--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
@@ -19,10 +19,10 @@ CVS repository including user access and passwords.</P>
 <p>In order to continue with this tutorial you must have access to a CVS
 repository.</p>
 <p>&nbsp;</p>
-<P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<P>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</P>
 
 </BODY>
 </HTML>
