--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -55,7 +55,7 @@ Their contents should be as follows:
 </blockquote>
 <p>The Navigator should now appear as follows:</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_nav.jpg" width="202" height="115"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_nav.jpg" alt="Navigator view"></p>
 </blockquote>
 </TD>
 </TR>
@@ -71,9 +71,8 @@ Their contents should be as follows:
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
-
 
 </BODY>
 </HTML>
