--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repoloca.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repoloca.htm
@@ -20,10 +20,10 @@ other team members we need to do two things:</P>
     <li> Commit the work into that repository.&nbsp;</li>
 </ol>
 </DIV>
-<P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<P>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</P>
 
 </BODY>
 </HTML>
