--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -35,7 +35,7 @@ specify an available repository.</p>
         view choose New &gt;&nbsp;Repository Location... 
         <blockquote> 
           <blockquote> 
-            <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" width="291" height="129"></p>
+            <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="CVS Repositories view"></p>
           </blockquote>
         </blockquote>
         <blockquote> 
@@ -54,7 +54,7 @@ In the CVS Repository Location wizard we need to fill in the location of our
 repository and our login information. You may require assistance from your
 repository administrator in order to fill in the necessary information.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_new3.jpg" width="498" height="200"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_new3.jpg" alt="Add CVS Repository dialog"></p>
 </blockquote>
 </TD>
 </TR>
@@ -146,16 +146,16 @@ Note that the repository connection is only used to validate the information.</P
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">Observe that the Repositories view now shows the new repository location.</P>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/image82_repo_view1.jpg" width="307" height="72"></P>
+<P CLASS="Para"><img align="texttop" border="0" src="../images/image82_repo_view1.jpg" alt="CVS Repositories view"></P>
 </TD>
 </TR>
 </TBODY>
 </TABLE>
 </DIV>
-<P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<P>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+</P>
 
 </BODY>
 </HTML>
