--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
@@ -30,11 +30,9 @@ working through these steps with you.
 
 </UL>
 
-
 <P>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
-
 
 </BODY>
 </HTML>
