--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
@@ -28,9 +28,8 @@ is a repository location</h3>
     still know the repository location that they are associated with.
 </DIV>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
-
 
 </BODY>
 </HTML>
