Updated doc for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
@@ -4,25 +4,19 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Choosing a JRE for launching a project</title>
+<title>Choosing a JRE for a launch configuration</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Choosing a JRE for launching a project</H1>
+Choosing a JRE for a launch configuration</H1>
 <P CLASS="Para">
-Instead of using the default JRE for running and debugging all Java programs in the workbench, you can specifically assign a JRE for launching an individual project.</P>
+Instead of using the default JRE for running and debugging all Java Application launch configurations, you can specifically assign a JRE for launching an individual configuration.</P>
 <ol>
-  <li>In the Package Explorer, select the Java project.</li>
-  <li>From the project's pop-up menu, select <b> <SPAN CLASS="Label">
-Properties</SPAN></b>.</li>
-  <li>Select the JRE properties page.</li>
-  <li>Click the <b> <SPAN CLASS="Label">
-Use custom JRE for launching</SPAN></b>
- button.</li>
-  <li>In the list of available JREs, select the JRE you want to use to launch this project 
+  <li>With a Java Application configuration selected in the Launch Configuration Dialog, select the JRE tab.</li>
+  <li>In the list of available JREs, select the JRE you want to use to launch this configuration 
   and click <b> <SPAN CLASS="Label">
-OK</SPAN></b>.</li>
+Apply</SPAN></b>, <b><SPAN CLASS="Label">Run</SPAN></b>, or <b><SPAN CLASS="Label">Debug</SPAN></b>.</li>
 </ol>
 <P><b>Note</b>:	Changing the JRE used for running does not affect the way Java source is compiled. You can adjust the build path to compile against custom libraries.&nbsp;</P>
 
@@ -45,8 +39,6 @@ debugging</a><br>
 <a href="../tasks/tasks-110.htm">Working with build 
 paths</a><br>
 <a href="../tasks/tasks-119.htm">Working with JREs</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
 <P><br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
