--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -20,51 +20,34 @@ In debug mode, execution may be suspended and resumed, variables may be inspecte
 </UL>
 <p>To launch a Java program:</p>
 <ol>
-  <li>In the Package Explorer, select the Java compilation unit or class file you 
-  want to launch. </li>
+  <li>In the Package Explorer, select the Java compilation unit or class file you want to launch. </li>
   <li>
-<P CLASS="Para">
-If you want to debug the program first, click the <b> <SPAN CLASS="Label">
-Debug</SPAN></b>
- button in the workbench toolbar.
-Otherwise, click the <b> <SPAN CLASS="Label">
-Run</SPAN></b>
- button.</P>
+<P CLASS="Para">If you want to debug the program first, in the top menu bar select the <b><SPAN CLASS="Label">Run &gt; Debug As &gt; Java Application</SPAN></b>
+</P>
+<P CLASS="Para">Otherwise, select <b><SPAN CLASS="Label">Run &gt; Run As &gt; Java Application</SPAN></b>
+</P>
   </li>
   <li>
 <P CLASS="Para">
-If you have not already set a launcher for the project, you will be prompted for a launcher to use.
-<br>
-<b>Note:</b>	You can set the selected launcher as the default for future launches in the project by 
-selecting the <SPAN CLASS="Label">
-<b>Set as default launcher for project</b></SPAN>
- check box.</P>
-  </li>
-  <li>
+If you selected a Java program, your program is now launched in the mode you selected, and the launch appears in the Debug view.</P>
 <P CLASS="Para">
-If you selected a Java program, your program is now launched in the mode you selected, and the launch appears in either the Debug view (if launched in debug mode) or the Processes view (if launched in run mode).</P>
-<P CLASS="Para">
-If you selected a Java project, you are prompted to select the class you wish to launch. Only those classes that define a <SPAN CLASS="Filename">
-main</SPAN>
- method are available to select. The chosen class is launched in the mode you selected.</P>
+If you selected a Java project, you may be prompted to select the class you wish to launch. Only those classes that define a <SPAN CLASS="Filename">
+   main</SPAN> method are available to select. If only one class with a main method is found in the project, that class is automatically chosen. 
+   The chosen class is launched in the mode you selected.</P>
   </li>
 </ol>
 <h2>
 Launching from other views and editors</h2>
 <P CLASS="Para">
-You can launch a program without first selecting it in the Packages or Navigator view. For example, if the active editor is open on the program you wish to launch, you can click the
-<b> <SPAN CLASS="Label">
-Run</SPAN></b>
- or <b> <SPAN CLASS="Label">
-Debug</SPAN></b>
- button. </P>
+You can launch a program without first selecting it in the Packages or Navigator view. For example, if the active editor is open on the program you wish to launch, you can select 
+  <b><SPAN CLASS="Label">Run &gt; Debug As &gt; Java Application</SPAN></b> or <b><SPAN CLASS="Label">Run &gt; Run As &gt; Java Application</SPAN><b></P>
 <h2>
-Launching with a non-default launcher</h2>
+Launching with another launch configuration type</h2>
 <P CLASS="Para">
-You may also launch a program using a different launcher without having to change the default launcher for a project. </P>
+You may also launch a program using a launch configuration type other than Java Application. </P>
 <P CLASS="Para">
-To do this, select a program or project in the Package Explorer, then open the <b>
-Run</b> or <b>Debug</b> button pull-down menus to see a list of all launchers available for the chosen mode. </P>
+To do this, select a program or project in the Package Explorer, then select the launch configuration type you wish to use from the menu options under <b><SPAN CLASS="Label">Run &gt; Debug As</SPAN></b> in the top menu bar.
+</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-6.htm">Java views</a><br>
 <a href="../concepts/concepts-7.htm">Java editor</a><br>
