--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Inlining a local variable</H1>
-<P>To inlne a local variable:</P>
+<P>To inline a local variable:</P>
 <ul>
   <li>&nbsp;In a Java editor, select the variable that you want to inline (you 
     can select a reference to the variable)</li>
