--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -13,16 +13,16 @@ Navigator view</H1>
 <P CLASS="Intro">
 
 The Navigator view provides a hierarchical view of the resources in the workbench.
-From here, you can open files for editing, select resources for operations such
+From here, you can open files for editing, or select resources for operations such
 as exporting.&nbsp;
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image241_nav_view.jpg" alt="Picture of Navigator view showing a simple hierarchy (project, folders, files)"></P>
 <P CLASS="Para">
 Right-click on any resource in the Navigator view to open a pop-up menu that
-allows you to perform operations such as copying, moving, or creating new
-resources, to compare resources with each other, or to synchronize with a team
-stream. To see a description of what each menu item does, move the mouse pointer
-to that menu item and press F1.&nbsp;</P>
+allows you to perform operations such as copying, moving, creating new
+resources, comparing resources with each other, or synchronizing with a team
+stream. To see a description of what each menu item does, move selection
+highlight to that menu item and press F1.&nbsp;</P>
 <P CLASS="Para">
 By default, the Navigator view is included in the Resources perspective. To add it
 to the current perspective, click <b>Window &gt; Show View &gt; Basic &gt;
