--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
@@ -4,35 +4,37 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding breakpoints</title>
+<title>Removing breakpoints</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Adding breakpoints</H1>
+Removing breakpoints</H1>
 <P CLASS="Para">
 Line breakpoints are set on an executable line of a program.</P>
 <ol>
-  <li>In the editor area, open the file where you want to add the breakpoint.</li>
+  <li>In the editor area, open the file where you want to remove the breakpoint.</li>
   <li>
 <P CLASS="Para">
-Directly to the left of the line where you want to add the breakpoint, open the 
-marker bar pop-up menu and select <b>Add Breakpoint. </b>A new breakpoint marker 
-appears on the marker bar, directly to the left of the line where you added the 
-breakpoint. Also, the new breakpoint appears in the Breakpoints view list.</P>
+Directly to the left of the line where you want to renove the breakpoint, open the 
+marker bar pop-up menu and select <b>Remove Breakpoint</b>. The breakpoint is removed from the workbench.
   </li>
 </ol>
+
+Breakpoints can also be removed in the <b>Breakpoints view</b>.  Select the breakpoint(s) to be removed and from the context menu
+select <b>Remove</b>.<br>
+All breakpoints can be removed from the workbench using the <b>Remove All</b> action in the context menu of the <b>Breakpoints
+view</b>.
 <P>
-While the breakpoint is enabled, thread execution suspends before that line of code is executed. The debugger selects the thread that has suspended and displays the stack frames on that thread's stack. The line where the breakpoint was set is highlighted in the editor in the Debug perspective.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <a href="../concepts/concepts-10.htm">Debugger</a><br>
 <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
 <a href="../concepts/concepts-7.htm">Java editor</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p>
+<a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
 <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
-<a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
 <a href="tendisbp.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
 <a href="../tasks/tasks-136.htm">Stepping through 
