--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
@@ -38,7 +38,7 @@ The breakpoint is disabled until either it is re-enabled or its hit count is cha
 <p><a href="../concepts/cbrkpnts.htm">Breakpoints</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p><a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
-<a href="../tasks/tdelbpts.htm">Deleting breakpoints</a><br>
+<a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
 <a href="../tasks/tendisbp.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
