--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -50,9 +50,9 @@ Remove</SPAN></b> from its pop-up menu in the Breakpoints view</LI>
 <p><a href="../concepts/cbrkpnts.htm">Breakpoints</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p><a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+<a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
 <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
-<a href="../tasks/tdelbpts.htm">Deleting breakpoints</a><br>
 <a href="../tasks/tendisbp.htm">Enabling and disabling breakpoints</a><br>
 &nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
