--- a/bundles/org.eclipse.platform.doc.user/concepts/coutline.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/coutline.htm
@@ -11,10 +11,11 @@
 <H1 CLASS="Head">
 Outline view</H1>
 
-<P>This view displays an outline of a structured file
+<P>The outline view displays an outline of a structured file
 that is currently open in the editor area, and&nbsp; lists structural
 elements.&nbsp;The contents of the outline view are editor-specific. In the
-example below, which is for a Java source file, the structural elements are classes, variables, and methods.
+example below, which is for a Java source file, the structural elements are classes,
+fields, and methods.
 The contents of the toolbar are also editor-specific.
 </p>
 
